<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_SignUpBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:src="@drawable/back"></ImageView>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="25dp"
                android:padding="10dp"
                android:id="@+id/ChooseLanguage">
            </Spinner>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/txt_SignUp"
            android:textColor="#4081FE"
            android:textSize="30dp"
            android:id="@+id/txt_SignUp"
            android:layout_gravity="center_horizontal">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="125dp"
        android:id="@+id/LinearLayout_Sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_User_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/txt_User_name"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"></TextView>

        <EditText
            android:id="@+id/edt_signupUserName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/edt_signupUserName"
            android:padding="10dp"
            android:textSize="13dp"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck"></EditText>

        <TextView
            android:id="@+id/txt_email_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@tring/txt_email_signup"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"></TextView>

        <EditText
            android:id="@+id/edt_signupEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/poppinsregular"
            android:hint="example@gmail.com"
            android:padding="10dp"
            android:textSize="13dp"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck"></EditText>

        <TextView
            android:id="@+id/txt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/txt_Password"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"></TextView>

        <EditText
            android:id="@+id/edt_signupPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/edt_loginPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="13dp"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck"></EditText>

        <TextView
            android:id="@+id/txt_Confirm_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/txt_Confirm_Password"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"></TextView>

        <EditText
            android:id="@+id/edt_sigupConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:fontFamily="@font/poppinsregular"
            android:hint="@string/edt_sigupConfirmPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="13dp"
            tools:ignore="TouchTargetSizeCheck,TextSizeCheck"></EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signupCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout_Sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:width="250dp"
        android:height="45dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/btn_Create_acc_in_sign_up"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck">

    </Button>

    <TextView
        android:id="@+id/txt_Or_Register_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signupCreateAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/txt_Or_Register_with"
        android:textSize="13dp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@id/txt_Or_Register_with"
        android:padding="15dp"
        android:id="@+id/Linear_Or_Register_with">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buton_shape_black_border"
            android:src="@drawable/facebook"
            tools:ignore="SpeakableTextPresentCheck"></ImageButton>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buton_shape_black_border"
            android:src="@drawable/google"
            tools:ignore="SpeakableTextPresentCheck"></ImageButton>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buton_shape_black_border"
            android:src="@drawable/apple"
            tools:ignore="SpeakableTextPresentCheck"></ImageButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:id="@+id/have_account"
            android:text="@string/have_account"
            android:textSize="13dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"></TextView>

        <TextView
            android:id="@+id/txt_toLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/txt_toLogin"
            android:textColor="#4081FE"
            android:textSize="13dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck"></TextView>

    </LinearLayout>

</RelativeLayout>