<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/back"
                android:padding="5dp"
                android:id="@+id/img_LoginBack">
            </ImageView>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="25dp"
                android:padding="10dp"
                android:layout_gravity="end"
                android:layout_centerVertical="true"
                android:id="@+id/ChooseLanguage">
            </Spinner>
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/txt_toLogin"
            android:textColor="#4081FE"
            android:textSize="30dp"
            android:id="@+id/txt_toLogin"
            android:layout_gravity="center_horizontal">
        </TextView>
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="110dp"
        android:id="@+id/LinearLayout_Sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_Email"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"
            android:textSize="13dp"
            android:textStyle="bold"
            android:id="@+id/txt_Email">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_shape"
            android:hint="example@gmail.com"
            android:padding="10dp"
            android:textSize="13dp"
            android:fontFamily="@font/poppinsregular"
            android:id="@+id/edt_loginEmail">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/txt_Password"
            android:fontFamily="@font/poppinsregular"
            android:textSize="13dp"
            android:textStyle="bold"
            android:id="@+id/txt_Password">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_shape"
                android:hint="@string/edt_loginPassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="13dp"
                android:fontFamily="@font/poppinsregular"
                android:id="@+id/edt_loginPassword">
            </EditText>

            <ImageView
                android:id="@+id/img_passwordVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/edt_loginPassword"
                android:src="@drawable/invisible"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp">
            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_toForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/txt_toForgotPassword"
                android:textSize="13dp"
                android:textStyle="bold">

            </TextView>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_loginLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout_Sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:width="250dp"
        android:height="45dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/btn_loginLogIn"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btn_loginLogIn"
        android:text="@string/txt_Or_Login_with"
        android:fontFamily="@font/poppinsregular"
        android:textSize="13dp"
        android:textStyle="bold"
        android:id="@+id/txt_Or_Login_with">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@id/txt_Or_Login_with"
        android:padding="15dp"
        android:id="@+id/Linear_Or_Register_with">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buton_shape_black_border"
            android:src="@drawable/facebook">
        </ImageButton>

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buton_shape_black_border"
            android:src="@drawable/google">
        </ImageButton>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/buton_shape_black_border"
            android:src="@drawable/apple">
        </ImageButton>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/noaccount"
            android:textSize="13dp"
            android:textStyle="bold"
            android:id="@+id/noaccount"
            ></TextView>

        <TextView
            android:id="@+id/txt_toSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/txt_toSignUp"
            android:textColor="#4081FE"
            android:textSize="13dp"
            android:textStyle="bold"></TextView>

    </LinearLayout>

</RelativeLayout>